<resources>
    <string name="app_name">HW4</string>
    <string name="bird_watching">Bird Watching</string>
    <string name="bird_name">Name of bird</string>
    <string name="bird_zipcode">Zipcode of bird</string>
    <string name="bird_reporter">Name of person reporting</string>
    <string name="submit_bird">Submit Bird</string>
    <string name="bird_enter">Enter bird information</string>
    <string name="find_a_bird">Enter a zipcode to search for a bird</string>
    <string name="find_bird">Find a bird</string>
    <string name="enter_zipcode">Enter zipcode</string>
    <string name="enter_bird">Enter Bird</string>
    <string name="bird_name_display">Found bird name:</string>
    <string name="bird_zip_display">Found bird zip:</string>
    <string name="bird_reporter_display">Found bird reporter:</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
